@startuml
'https://plantuml.com/class-diagram

class Post {
    PostklasseEnum:
    \t[Normal, Budsjettpost]
    LocalDate dato
    String beskrivelse
    Integer innPaaKonto
    Integer utFraKonto

    //Unikt for Normalposter://
    String tekstFraBanken
    NormalposttypeEnum:
    \t[Normal, Delpost, Utelates, Kredittkortpost]
    NormalpoststatusEnum:
    \t[Ubehandlet, Under_Arbeid, Ferdig]
    forelderPostUuid


    //Unikt for Budsjettposter://
    BudsjettpoststatusEnum:
    \t[Foreslått, Tildelt]
    EstimatpresisjonEnum:
    \t[Lav, Middels, Høy]
    PrioritetEnum:
    \t[1 - Må, 2 - Bør, 3 - Kan]
    rekkefølge
    erRegelmessig

}

class Kategori {
    String kategoriTittel
    String underkategoriTittel
    String uuidHovedkategori
    Integer nivaa [1 eller 2]]
    String Beskrivelse
    boolean erAktiv
    boolean brukesTilBudsjett
    boolean brukesTilRegnskap
    boolean brukesTilFasteUtgifter  //Trengs denne?//
    hentPoster()   //Kan brukes når kategorier skal slås sammen//

}

class Periode {
    PeriodeTypeEnum: AarsRegnskap, MaanedsRegnskap, MaanedsMal
    LocalDate datoFra
    LocalDate datoTil
    String beskrivelse
    Integer sumBudsjettInntekter
    Integer sumBudsjettUtgifter
    Integer sumBudsjettResultat
    Integer sumRegnskapUtgifter
    Integer sumRegnskapInntekter
    Integer sumRegnskapResultat
    Integer sumDifferanseResultatBudsjettRegnskap
    oppdaterSummer()
    finnTilknyttedeBudsjettposter()
    finnTilknyttedeNormalposter()
    finnTilknyttedePeriodeposter()
}

class Periodepost {
    PeriodepostTypeEnum:
        \t[Aarsoversiktpost, Aarsoversiktbudsjettpost,
        \t Maanedsoversiktpost, Maanedsoversiktbudsjettpost
        \t Kostnadspakke, Budsjettpostgruppe]
    LocalDate datoFra
    LocalDate datoTil
    String beskrivelse
    Integer sumBudsjettInntekter  //Brukes til faste inntekter og regnskap//
    Integer sumBudsjettUtgifter  //Brukes til faste utgifter og regnskap//
    Integer sumRegnskapInntekter //Brukes til regnskap//
    Integer sumRegnskapUtgifter  //Brukes til regnskap//
    Integer sumRegnskapResultat  //Brukes til regnskap//
    oppdaterSummer()
    finnTilknyttedePoster()
}

Post --o Kategori
Periodepost --o Kategori
Periodepost --o Periode
Post --o Periodepost : Kun for kostnadspakker\n og budsjettpostgrupper

@enduml